[gd_scene load_steps=32 format=2]

[ext_resource path="res://Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/tutorial.png" type="Texture" id=2]
[ext_resource path="res://Root.gd" type="Script" id=3]
[ext_resource path="res://assets/art/background.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Logo.png" type="Texture" id=5]
[ext_resource path="res://assets/font/Roboto_Mono/static/RobotoMono-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://styles/RootTheme.tres" type="Theme" id=7]
[ext_resource path="res://TutorialButtonStyle.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/sounds/Kevin MacLeod - Hustle.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/art/Success_Jumping.svg" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 80, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 240, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 480, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 560, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 640, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 720, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 800, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 880, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 960, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1040, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1120, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1200, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1280, 0, 80, 106 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1360, 0, 80, 106 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="DynamicFont" id=42]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=43]
size = 32
font_data = ExtResource( 6 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 3 )
Main = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="TitleScreen" type="Control" parent="."]
pause_mode = 2
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
theme = ExtResource( 7 )

[node name="Logo" type="TextureRect" parent="TitleScreen"]
margin_left = 499.0
margin_top = 376.0
margin_right = 1421.0
margin_bottom = 516.0
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 10.0
texture = ExtResource( 5 )

[node name="StartButton" type="Button" parent="TitleScreen"]
margin_left = 904.0
margin_top = 741.0
margin_right = 1007.0
margin_bottom = 792.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 7 )
text = "Start"

[node name="TutorialButton" type="Button" parent="TitleScreen"]
margin_left = 851.0
margin_top = 818.0
margin_right = 1068.0
margin_bottom = 882.0
rect_min_size = Vector2( 192, 64 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 7 )
text = "How to play"

[node name="GameOver" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 7 )

[node name="Control" type="Control" parent="GameOver"]
margin_right = 1920.0
margin_bottom = 339.0
size_flags_vertical = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="GameOver/Control"]
position = Vector2( 940, 264 )
scale = Vector2( 2, 2 )
frames = SubResource( 23 )
frame = 16
playing = true

[node name="NiceTry" type="Label" parent="GameOver"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -43.0
margin_bottom = 43.0
size_flags_vertical = 3
text = "Nice Try!"
align = 1
valign = 1

[node name="Score" type="Label" parent="GameOver"]
margin_top = 600.0
margin_right = 1920.0
margin_bottom = 686.0
size_flags_vertical = 2
custom_fonts/font = SubResource( 42 )
text = "Score: 0"
align = 1
valign = 1

[node name="RestartButton" type="Button" parent="GameOver"]
margin_left = 896.0
margin_top = 776.0
margin_right = 1037.0
margin_bottom = 827.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
theme = ExtResource( 7 )
text = "Restart"

[node name="Credits" type="Label" parent="GameOver"]
margin_left = 584.0
margin_top = 928.0
margin_right = 1344.0
margin_bottom = 1017.0
custom_fonts/font = SubResource( 43 )
text = "Game made by Hyewon Kim and Brian Norman
Background music by Kevin Mcleod"
align = 1
valign = 1

[node name="Tutorial" type="Control" parent="."]
pause_mode = 2
visible = false
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="Tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -860.0
margin_top = -425.5
margin_right = 860.0
margin_bottom = 425.5
texture = ExtResource( 2 )

[node name="BackButton" type="Button" parent="Tutorial"]
margin_left = 63.0
margin_top = 934.0
margin_right = 147.0
margin_bottom = 985.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "Back"

[node name="PlayButton" type="Button" parent="Tutorial"]
margin_left = 1762.0
margin_top = 934.0
margin_right = 1846.0
margin_bottom = 985.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "Play"

[node name="Main" parent="." instance=ExtResource( 1 )]
visible = false
theme = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="TitleScreen/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="TitleScreen/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="button_up" from="GameOver/RestartButton" to="." method="_on_RestartButton_button_up"]
[connection signal="pressed" from="Tutorial/BackButton" to="." method="_on_TutorialBackButton_pressed"]
[connection signal="pressed" from="Tutorial/PlayButton" to="." method="_on_StartButton_pressed"]
